--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 server.error.include-message=always
 server.error.include-binding-errors=always
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/amigoscode
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/amigoscode
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 spring.jpa.properties.hibernate.format_sql=true
